2009-01-27  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* libopenvas/store.c (store_plugin): Fixed a bug: In
	case of using cache_folder, the wrong filenames for the
	actual plugin file where written into the cache file.
 
2009-01-23  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* libopenvas/store.c (store_init): Also handle NULL
	for its parameter.

2009-01-23  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* libopenvas/store.c (store_dir, store_init): Improved
	comments and made implementation more robust.
	store_init will not anymore try to create the directory.

2009-01-20  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Changed API (new parameter in openvas_ssh_login_file_read). Fixes build
	of latest openvas-server.

	* libopenvas/openvas_ssh_login.c, libopenvas/openvas_ssh_login.h:
	Changed file headers to indicate that they are part of
	openvas-libraries.

	* libopenvas/openvas_ssh_login.c (openvas_ssh_login_file_read): Added
	parameter check_keyfiles to allow exclusion/inclusion of logins that
	are lacking pub/private key files, included parameter in documentation.

	* libopenvas/openvas_ssh_login.h: Adjusted proto for
	openvas_ssh_login_file_read.

2009-01-21  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* libopenvas/store.h: Applied gcc deprecation marker
	for deprecated functions.

2009-01-20  Michael Wiegand <michael.wiegand@intevation.de>

	* libopenvas/Makefile: Fixed typo in LO_OBJS which caused the build to
	fail on amd64.

2009-01-20  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Added make targets for openvas_ssh_login module.
	
	* libopenvas/Makefile: Included openvas_ssh_login module.

2009-01-20  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Inclusion of openvas_ssh_login module (copy from client).

	* libopenvas/openvas_ssh_login.c, libopenvas/openvas_ssh_login.h: Added.
	
	* MANIFEST, Makefile, libopenvas/Makefile: Updated.
